--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,14 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  height: 60px;
+  display: flex;
+  margin: 10px 10px;
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #008884;
+  height: 120px;
   padding: 20px;
   color: white;
 }
@@ -23,6 +24,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
