add full component for home user page

--- a/src/App.css
+++ b/src/App.css
@@ -47,4 +47,5 @@ body {}
   padding: 40px !important;
   border: 1px solid grey !important;
   border-radius: 5px !important;
+  margin-top: 20px !important;
 }
