--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,11 @@ body {}
 }
 
 .box-user-page {
-  margin-left: 30px !important;
+  margin-left: 50px !important;
   margin-right: 30px !important;
+  border: none !important;
+}
+
+.box-noborder {
+  border: none !important;
 }
