Add progress bar and modal onclick button donation

--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,17 @@ body {}
   border-left: none !important;
 }
 
-.footer-list {
-  padding-right: 100px;
+.footer-menu {
+  justify-content: right;
+  align-items: right;
+  align-content: right;
+  text-align: right;
+  padding-top: 20px;
+  padding-left: 250px !important;
+}
+
+.h5 {
+  margin-bottom: 30px;
 }
 
 .aligned {
@@ -109,6 +118,20 @@ body {}
   border: none !important;
 }
 
+.amount, .amount-target, .amount-now {
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+  text-align: left !important;
+  margin-top: 0px;
+  margin-bottom: 5px;
+}
+
+.donation-button {
+  padding-top: 0px;
+  padding-bottom: 10px;
+}
+
 .donation-header {
   padding-left: 150px !important;
   padding-top: 30px;
@@ -121,6 +144,13 @@ body {}
   text-align: center;
   padding-left: 150px !important;
   padding-top: 30px;
+}
+
+.donation-modal {
+  justify-content: center !important;
+  align-items: center !important;
+  align-content: center !important;
+  text-align: center !important;
 }
 
 .donation-content {
