--- a/src/App.css
+++ b/src/App.css
@@ -59,10 +59,6 @@ body {}
   height: 160px !important;
 }
 
-.menu {
-  color: #fff !important;
-}
-
 .dropmenu {
   color: #fff !important;
   height: 36px;
@@ -159,6 +155,12 @@ body {}
 
 .table-box {
   width: 92% !important;
+  font-size: 12px !important;
+}
+
+.borderless {
+  border-style: none !important;
+  color: #fff !important;
 }
 
 .donation-content {
