Edit footer and create box-class-list in medium directory

--- a/src/App.css
+++ b/src/App.css
@@ -14,17 +14,23 @@ body {}
   border-left: none !important;
 }
 
-.footer-menu {
-  justify-content: right;
-  align-items: right;
-  align-content: right;
-  text-align: right;
-  padding-top: 20px;
-  padding-left: 250px !important;
+.container {
+  margin-bottom: 38px;
 }
 
-.h5 {
-  margin-bottom: 30px;
+.container-logo {
+  margin-top: 140px !important;
+}
+
+.footer-menu {
+  padding-right: 10px !important;
+}
+
+.footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 .aligned {
@@ -42,6 +48,13 @@ body {}
   height: 40px;
   display: flex;
   margin: 10px 10px;
+}
+
+.footer-logo {
+  height: 60px;
+  display: flex;
+  margin: 20px 20px;
+  margin-top: 30px;
 }
 
 .App-header {
@@ -118,13 +131,61 @@ body {}
   border: none !important;
 }
 
-.amount, .amount-target, .amount-now {
+.amount, .amount-now, .amount-target {
   justify-content: left !important;
   align-items: left !important;
   align-content: left !important;
   text-align: left !important;
   margin-top: 0px;
   margin-bottom: 5px;
+}
+
+.class-name, .class-category {
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+  text-align: left !important;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.class-teacher {
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+  text-align: left !important;
+  margin-top: 20px;
+  margin-bottom: 0px;
+}
+
+.teacher-name {
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+  text-align: left !important;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.collected, .collect-amount {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.collected, .collect-amount {
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+  text-align: left !important;
+}
+
+.day, .day-left {
+  justify-content: right !important;
+  align-items: right !important;
+  align-content: right !important;
+  text-align: right !important;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .donation-button {
