--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,30 @@ p {
   height: 65px;
 }
 
+.contact-header {
+  margin-left: 280px
+}
+
+.contact-content {
+  margin-top: 10px;
+  justify-content: left !important;
+  align-items: left !important;
+  align-content: left !important;
+}
+
+.contact-content h3 {
+  margin-bottom: 0px;
+}
+
+.contact-content a {
+  margin-left: 22%;
+}
+
+.box-team {
+  margin: 10px 10px 10px 180px;
+  width: 78% !important;
+}
+
 .box-list {
   height: auto !important;
   width: 92% !important;
