Add slideshow in homepage but notedited yet

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,8 @@ p {
 .navigasi {
   background-color: #008884;
   height: auto;
-  margin-bottom: 15px;
+  padding-bottom: 0px !important;
+  padding-top: 0px !important;
 }
 
 .navigasiright {
